<resources>
    <string name="app_name">Skripsi 2</string>
    <string name="q1">Apakah anda merasa cemas / khawatir yang berlebih?</string>
    <string name="q2">Apakah anda merasa jantung berdebar-debar?</string>
    <string name="q3">Apakah anda merasa berkeringat secara berlebih?</string>
    <string name="q4">Apakah anda merasa bagian tubuh menjadi gemetar? </string>
    <string name="q5">Apakah anda mengalami kesulitan dalam konstentrasi?</string>
    <string name="q6">Apakah anda selalu merasa resah dan berpikiran yang tidak realistis?</string>
    <string name="q7">Apakah anda merasa mudah pusing?</string>
    <string name="q8">Apakah anda merasa sulit bernapas secara normal? </string>
    <string name="q9">Apakah anda merasa takut berada di tempat umum?</string>
    <string name="q10">Apakah anda merasa ketakutkan anda tidaklah realistis?</string>
    <string name="q11">Apakah anda merasa suatu penyebab yang membuat otot anda terasa seperti kaku/tegang?</string>
    <string name="q12">Apakah anda merasa suatu penyebab yang membuat sering sakit kepala atau migrain?</string>
    <string name="q13">Apakah anda merasa suatu penyebab yang membuat rasa cemas secara intens?</string>
    <string name="q14">Apakah anda merasa sulit mengendalikan rasa khawatir? </string>
    <string name="q15">Apakah anda pernah mengalami perasaan ketidaksabaran/mudah lelah/sulit konsentrasi/mudah tersinggung/ketegangan otot?</string>
    <string name="q16">Apakah anda merasa mudah kaget atau terkejut?</string>
    <string name="q17">Apakah anda merasa kesulitan untuk BAB?</string>
    <string name="q18">Apakah anda sudah mengalami simtom sebelumnya selama 6 bulan terakhir? </string>
    <string name="q19">Apakah anda merasa khawatir tak terbatas pada objek-objek tertentu?</string>
    <string name="q20">Apakah perasaan cemas anda berlangsung hampir setiap hari?</string>
    <string name="q21">Apakah perasaan cemas anda menghambat pada sebagian besar fungsi sosial (pekerjaan, pendidikan, sosialisasi)?</string>
    <string name="q22">Apakah serangan panik yang anda alami berulang tak terduga?</string>
    <string name="q23">Apakah selama satu bulan terakhir anda merasa kekhawatiran atas konsenkuensi yang diterima ketika serangan terjadi?</string>
    <string name="q24">Apakah rasa panik anda muncul meskipun pemicu panik tidak membahayakan? </string>
    <string name="q25">Apakah anda merasakan sensasi sakit seperti terkena serangan jantung?</string>
    <string name="q26">Apakah anda mengalami proses pada suatu kejadian yang sehingga menyebabkan traumatik ekstrim?</string>
    <string name="q27">Apakah anda mengalami mimpi buruk setelah kejadian traumatik?</string>
    <string name="q28">Apakah anda merasa selalu teringat dengan hal traumatis meskipun sudah beraktivitas lain? </string>
    <string name="q29">Apakah anda menghindari aktifitas yang berhubungan dengan pengalaman traumatis?</string>
    <string name="q30">Apakah anda merasakan sakit fisik saat teringat kejadian traumatik?</string>
    <string name="q31">Apakah anda merasakan ketakutan ekstrim pada penjelasan suatu kejadian traumatik?</string>
    <string name="q32">Apakah anda merasa seperti mengalami kembali kejadian traumatis?</string>
    <string name="q33">Apakah anda mencoba menghindari sesuatu yang dihubungkan dengan trauma dan memiliki respon yang kurang?</string>
    <string name="q34">Apakah anda merasa respon anda pada sesuatu dirasa berlebihan seperti kaget yang berlebihan? </string>
    <string name="q35">Apakah durasi dari gejala yang anda alami lebih dari satu bulan?</string>
    <string name="q36">Apakah anda merasa kesulitan saat ingin tidur?</string>
    <string name="q37">Apakah anda menghindari hobi yang dulu pernah disukai?</string>
    <string name="q38">Apakah anda merasa pikiran anda berulang-ulang atau merasa dorongan yang menyebabkan kecemasan? </string>
    <string name="q39">Apakah anda memiliki perilaku dan tindakan mental repetitif untuk menghilangkan ketegangan?</string>
    <string name="q40">Apakah anda punya ketakutan terhadap kotoran, kuman atau infeksi berlebihan?</string>
    <string name="q41">Apakah anda merasa ketakutan pada orang terkasih mendapat bahaya saat mengemudi?</string>
    <string name="q42">Apakah anda merasa takut membahayakan diri sendiri atau orang terkasih?</string>
    <string name="q43">Apakah anda melakukan cuci tangan terus menerus untuk menghilangkan kotoran, kuman atau infeksi?</string>
    <string name="q44">Apakah anda melakukan hal-hal yang seharusnya tidak boleh dilakukan? </string>

</resources>